fix vertical alignment

--- a/src/app/components/result/result.component.css
+++ b/src/app/components/result/result.component.css
@@ -52,6 +52,7 @@ article h4 i {
 
 article header  {
   display: flex;
+  align-items: baseline;
 }
 
 article header div {
